2009-01-30  H.J. Lu  <hongjiu.lu@intel.com>

	2009-01-27  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38503
	* g++.dg/warn/Wstrict-aliasing-bogus-placement-new.C: New testcase.

	2009-01-26  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38745
	* g++.dg/torture/pr38745.C: New testcase.

	2009-01-26  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38851
	* g++.dg/warn/Wuninitialized-1.C: New testcase.

	2009-01-20  Andrew Pinski  <andrew_pinski@playstation.sony.com>
		    Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38747
	PR tree-optimization/38748
	* gcc.dg/tree-ssa/struct-aliasing-1.c: New test.
	* gcc.c-torture/execute/struct-aliasing-1.c: Likewise.

2009-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	2009-01-28  Richard Guenther  <rguenther@suse.de>

	PR middle-end/38908
	* g++.dg/warn/Wuninitialized-2.C: New testcase.

	2009-01-27  Daniel Kraft  <d@domob.eu>

	PR fortran/38883
	* gfortran.dg/mvbits_6.f90:  New test.
	* gfortran.dg/mvbits_7.f90:  New test.
	* gfortran.dg/mvbits_8.f90:  New test.

	2009-01-21  Daniel Kraft  <d@domob.eu>

	PR fortran/38887
	* gfortran.dg/mvbits_5.f90:  New test.

2009-01-29  H.J. Lu  <hongjiu.lu@intel.com>

	Backport from mainline:
	2009-01-29  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/38857
	* gcc.c-torture/compile/pr38857.c: New test.

	2009-01-28  Richard Guenther  <rguenther@suse.de>

	PR tree-optimization/38926
	* gcc.c-torture/compile/pr38926.c: New testcase.

2009-01-29  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-01-28  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38988
	* gcc.target/i386/pr38988.c: New test.

	2009-01-27  Uros Bizjak  <ubizjak@gmail.com>

	PR middle-end/38969
	* gcc.c-torture/execute/pr38969.c: New test.

2009-01-27  Steve Ellcey  <sje@cup.hp.com>

	PR middle-end/38615
	* gcc.dg/pr38615.c: New test.

2009-01-27  Uros Bizjak  <ubizjak@gmail.com>

	Backport from mainline:
	2009-01-07  Uros Bizjak  <ubizjak@gmail.com>

	PR target/38706